@@ -69,3 +69,4 @@ Initial release
 * Change Timers time for saving, purging and rebuilddic to every 2 hours 5 minutes, 5 hours and 3 days 1 hour respectively - This is to avoid them clashing with each other [pyborg.py]
 * Fixed the locale characters stripping issue by making the regex only strip mIRC control codes [pyborg.py]
 * Added a check for empty nicknames with the new 'smart' replacement trick [pyborg-irc.py]
+* Made the timers stop when pyborg closes [pyborg-irc.py & pyborg.py]
